<?xml version="1.0"?>
<package format="2">
  <name>ekf_slam</name>
  <version>0.0.0</version>
  <description>The ekf_slam package</description>
  <maintainer email="zimgong@umich.edu">Zim Gong</maintainer>

  <license>BSD</license>

  <author>Zim Gong</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslaunch</depend>
  <depend>roslib</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>mrpt_libros_bridge</depend>
  <depend>mrpt_libgui</depend>
  <depend>mrpt_libslam</depend>
  <depend>mrpt_msgs_bridge</depend>

  <exec_depend>rviz</exec_depend>
  <exec_depend>mrpt_rawlog</exec_depend>

</package>
